css/style.css
/* ... */
.Address.site-footer .site-footer-nav .menu_text li a:hover {
     color: #7ec8ff;
}

.Address.site-footer .site-footer-nav .menu_text li.active a {
     color: #fff;
     padding-bottom: 3px;
     border-bottom: 2px solid #136af8;
}

.address_text{
     width: 100%;
     text-align: center;
     margin: 0px;
     border-bottom: 2px solid #136af8;
     color: #fff;
}
.main{
    width: 9%;
    margin: 0 auto;
    text-align: center;
    margin-top: 40px;
 }

 .address_2{
     width: 100%;
     float: left;
 }
 .home{
     width: 100%; 
     float: left;
     color: #fff; 
}

 .address{
     padding-left: 30px; 
     color: #fff;
 }

 .menu_main{
     width: 40%;
     margin: 0 auto;
     text-align: center;
 }

 .menu_text{
     width: 100%; 
     float: left;
     margin-top: 40px;
     margin-bottom: 30px; 
}
 .menu_text ul{ 
     margin: 0px;
     padding: 0px;

 }
  .menu_text li{
     float: left;
     padding-left: 50px;
     color: #fff;
  }

  .menu_text li a{
     color: #fff;
  }

 .menu_text li a:hover{
     color: #136af7;
 }

 .active{ color: #000; }

.footer{
     width: 100%;
     float: left;
     background-color: #061525;
     height: auto;
     padding: 20px 0;
     border-top: 1px solid rgba(255, 255, 255, 0.08);
}


.main_btn{ 
     width: 100%;
     margin: 0 auto;
     text-align: center;
     }

 .contact_us_3 {
    margin-top: 90px;
    margin-bottom: -105px;
    box-shadow: 0px 0px 8px 0px;
    color: #0a1422; 
}   

.site_info {
    display: flex;
    color: #fff;
    padding-bottom: 10px;
}

.info_icon {
    background-color: #fff;
    padding: 20px;  
    margin-right: 30px;  
    width: 60px;
height: 60px;
border-radius: 10px;
}

.header_main{
     width: 100%;
     float: left;
     background-color: #081b30;
     padding: 14px 0;
     display: flex;
     align-items: center;
     box-sizing: border-box;
}

.header_main > .header_main {
     float: none;
     width: 100%;
     display: flex;
     align-items: center;
}

.copyright_text{
     width: 100%;
     float: left;
     margin-top: 20px;
}

button.btn.btn-primary,button.btn.btn-primary:hover,button.btn.btn-primary:focus {
    background: #136af8;
    padding: 10 40px;
}

.padding-top_0 {
     padding-top: 0 !important;
}

.padding_bottom_0 {
     padding-bottom: 0 !important; 
}


#main_slider .carousel-control-prev, #main_slider .carousel-control-next {
    width: 65px;
    height: 65px;
    background: #fff;
    opacity: 1;
    font-size: 30px;
    color: #091e30;
    border-radius: 100%;
}

#main_slider a.carousel-control-prev {
    position: absolute;
    left: 50px;
    top: 40%;
}

#main_slider a.carousel-control-next {
    position: absolute;
    left: 50px;
    top: 50%;
}

#main_slider .carousel-control-prev:hover,
#main_slider .carousel-control-next:hover,
#main_slider .carousel-control-prev:focus,
#main_slider .carousel-control-next:focus {
     background: #091e30;
     color: #fff;
}

.plane_secsun_2{ 
     width: 100%;
     float: left;
     margin-top: 30px;
 }


.product {padding-top: 90px;}
.product .titlepage h2 {color: #136af8;}
.black {color: #000;}
.section_Clients .titlepage h2{
   padding: 0px 0px 0px 0px;
font-size: 50px;
font-weight: bold;
color: #000;
line-height: 50px;
margin-bottom: 20px;
text-align: center;
}
.contact_us .titlepage h2 {text-align: center;}
.form-control {

    padding: 13px 16px;

}

.footer p {color: #fff;}
.footer p a {color: #fff;}
.footer p a:hover {color: #fff;}



.product_pagr .clothes_main {margin-bottom: 90px;}

/* Removed padding-top: 5px override — it broke vertical symmetry vs padding-bottom and skewed navbar alignment */

.sport_product {

    margin-bottom: 20px;

}


.about_pape .banner-main {margin-bottom: 60px;}


#read-more-heros{
     color: white;
}

#read-more-heros:hover{
     color: #136af8;
}

